# ner-project

./: README.md  pyproject.toml
models/: berts.py  configs.py  local_evaluate.py  local_inference.py  local_train.py  utils.py
tests/: test_bert.py
